.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type_Version_Activity__c.object
<CustomObject>
    <description>Junction object that supports many-to-many relationship between Service Type Version and Activity</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Code__c</fullName>
        <formula>Incap311__Activity__r.Incap311__Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Name__c</fullName>
        <formula>Incap311__Activity__r.Incap311__Activity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>Incap311__Activity__c</referenceTo>
        <relationshipName>Service_Type_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Applied_SLA_Type__c</fullName>
        <description>Deprecated as duplicate field (SLA Type)</description>
        <formula>IF(
   NOT(ISBLANK(TEXT(Incap311__Override_SLA_Type__c))),
   TEXT(Incap311__Override_SLA_Type__c),
   Incap311__SLA_Type__c
)</formula>
        <label>DEPRECATED - Applied SLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Applied_SLA__c</fullName>
        <description>Deprecated as duplicate field (SLA)</description>
        <formula>IF(
   NOT(ISBLANK(Incap311__Override_SLA__c)),
   Incap311__Override_SLA__c,
   Incap311__SLA__c
)</formula>
        <inlineHelpText>Applied SLA is override SLA if present, else it is SLA</inlineHelpText>
        <label>DEPRECATED - Applied SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Next_Activity__c</fullName>
        <label>Next Activity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this box is checked the Service Activity will not be automatically created</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <label>Order</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_SLA_Type__c</fullName>
        <label>Override SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Override_SLA__c</fullName>
        <label>Override SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Body_Close__c</fullName>
        <label>Rich Email Body (Close)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Closing_Close__c</fullName>
        <label>Rich Email Closing (Close)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Intro_Close__c</fullName>
        <label>Rich Email Intro (Close)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__SLA_Type__c</fullName>
        <formula>IF( TEXT(Incap311__Override_SLA_Type__c) != &apos;&apos;, 
TEXT(Incap311__Override_SLA_Type__c), 
TEXT(Incap311__Activity__r.Incap311__SLA_Type__c))</formula>
        <label>SLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SLA__c</fullName>
        <formula>IF(ISNULL(Incap311__Override_SLA__c),Incap311__Activity__r.Incap311__SLA__c,Incap311__Override_SLA__c)</formula>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Code__c</fullName>
        <formula>Incap311__Service_Type_Version__r.Incap311__Service_Type_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version__c</fullName>
        <label>Service Type Version</label>
        <referenceTo>Incap311__Service_Type_Version__c</referenceTo>
        <relationshipLabel>Service Type Version Activities</relationshipLabel>
        <relationshipName>Service_Type_Version_Activities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Task_Description__c</fullName>
        <label>Version Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Track_Activity_Closure_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Activity Closure Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Type Version Activity</label>
    <nameField>
        <displayFormat>STVA-{00000000}</displayFormat>
        <label>Service Type Version Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Version Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Incap311__Order_Must_Be_Positive</fullName>
        <active>true</active>
        <description>Ensure the value in the Order field is non-negative (0 or greater)</description>
        <errorConditionFormula>Incap311__Order__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Incap311__Order__c</errorDisplayField>
        <errorMessage>The Order value must be greater than or equal to zero (0)</errorMessage>
    </validationRules>
</CustomObject>